feat: RxAlamofire를 사용한 Post 메서드 작성 (#30)

--- a/ios/baseball/Podfile
+++ b/ios/baseball/Podfile
@@ -8,7 +8,8 @@ target 'baseball' do
   # Pods for baseball
   pod 'RxSwift', '~> 6.1.0'
   pod 'RxCocoa', '~> 6.1.0'
-  pod 'Alamofire', '~> 5.4.3'
+  pod 'Alamofire'
+  pod 'RxAlamofire'
 
   target 'baseballTests' do
     inherit! :search_paths
