--- a/ios/baseball/Podfile
+++ b/ios/baseball/Podfile
@@ -9,7 +9,7 @@ target 'baseball' do
   pod 'RxSwift', '~> 6.1.0'
   pod 'RxCocoa', '~> 6.1.0'
   pod 'Alamofire'
-  pod 'RxAlamofire'
+  pod 'RxDataSources'
 
   target 'baseballTests' do
     inherit! :search_paths
